...
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="this_is_where_settings_will_go">This is where Settings will go</string>
<string name="this_is_where_matches_will_go">This is where Matches will go</string>
<string name="profile">Profile</string>
<string name="matches">Matches</string>
<string name="settings">Settings</string>
<string name="drawer_open">Open navigation drawer</string>
<string name="drawer_close">Close navigation drawer</string>
<string name="mark_t">Mark T</string>
<string name="really_cool_dude">Really cool dude</string>
<string name="image_of_the_match">Image of the match</string>
<string name="like">Like</string>
<string name="liked_message">You liked: %s</string>
...
